# wazupBremenScraper

./: README.md  pyproject.toml
wazupHB/scraping/: Scraper.py
